code: stream 개행